BE - Sonar - code smells fix to less than 180, fix all bugs